<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

        <item
            android:id="@+id/action_popular"
            android:orderInCategory="1"
            android:title="@string/action_popular"
            app:showAsAction="ifRoom"/>
        <!--COMPLETED (1) Add a menu item to open the map-->
        <item
            android:id="@+id/action_top_rated"
            android:title="@string/action_top_rated"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_favorites"
            android:title="@string/action_favorites"
            app:showAsAction="ifRoom" />

</menu>